Making display transaction

--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -34,7 +34,7 @@
         android:layout_marginTop="292dp"
         android:fontFamily="@font/architects_daughter"
         android:gravity="center"
-        android:text="¿A CHING@?"
+        android:text="!A Caray¡"
         android:textColor="@color/white"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -75,7 +75,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enseñamelas cuentas"
+        android:text="Enseñame las cuentas"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
