--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -192,7 +193,7 @@
                     app:layout_constraintGuide_begin="157dp" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/buttonDeleteTransaction"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
