--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -15,55 +15,6 @@
             tools:context=".fragments.transactions.TransactionDisplay">
 
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="311dp"
-                    android:layout_height="120dp"
-                    android:layout_marginHorizontal="50dp"
-                    android:background="@color/white"
-                    app:layout_constraintBottom_toTopOf="@+id/guideline10"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.695">
-
-
-                        <TextView
-                            android:id="@+id/textAmount3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Account"
-                            android:textColor="@color/rec_view_gray"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.5"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/textConcerning" />
-
-                        <TextView
-                            android:id="@+id/textConcerning"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Concerning"
-                            android:textColor="@color/rec_view_gray"
-                            app:layout_constraintBottom_toTopOf="@+id/textAmount3"
-                            app:layout_constraintEnd_toEndOf="@+id/textAmount3"
-                            app:layout_constraintHorizontal_bias="0.5"
-                            app:layout_constraintStart_toStartOf="@+id/textAmount3"
-                            app:layout_constraintTop_toBottomOf="@+id/textAmount" />
-
-                        <TextView
-                            android:id="@+id/textAmount"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/amount"
-                            android:textColor="@color/rec_view_gray"
-                            app:layout_constraintBottom_toTopOf="@+id/textConcerning"
-                            app:layout_constraintEnd_toEndOf="@+id/textConcerning"
-                            app:layout_constraintHorizontal_bias="0.5"
-                            app:layout_constraintStart_toStartOf="@+id/textConcerning"
-                            app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline10"
                     android:layout_width="wrap_content"
@@ -91,8 +42,8 @@
                     android:id="@+id/txtCategory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:text="@string/category"
-                   android:layout_marginTop="20dp"
                     app:layout_constraintStart_toStartOf="@+id/guideline11"
                     app:layout_constraintTop_toBottomOf="@+id/txtIdTransaction" />
 
@@ -100,16 +51,17 @@
                     android:id="@+id/txtCategoryDisplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
                     android:layout_marginTop="20dp"
+                    android:text="TextView"
                     app:layout_constraintStart_toStartOf="@+id/guideline13"
                     app:layout_constraintTop_toBottomOf="@+id/txtIdTransactionDISPLAY" />
+
                 <TextView
                     android:id="@+id/txtSubCategory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/subcategory"
                     android:layout_marginTop="20dp"
+                    android:text="@string/subcategory"
                     app:layout_constraintStart_toStartOf="@+id/guideline11"
                     app:layout_constraintTop_toBottomOf="@+id/txtCategory" />
 
@@ -117,16 +69,17 @@
                     android:id="@+id/txtSubCategoryDisplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
                     android:layout_marginTop="20dp"
+                    android:text="TextView"
                     app:layout_constraintStart_toStartOf="@+id/guideline13"
                     app:layout_constraintTop_toBottomOf="@+id/txtCategoryDisplay" />
+
                 <TextView
                     android:id="@+id/txtDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/date_and_time"
                     android:layout_marginTop="20dp"
+                    android:text="@string/date_and_time"
                     app:layout_constraintStart_toStartOf="@+id/guideline11"
                     app:layout_constraintTop_toBottomOf="@+id/txtSubCategory" />
 
@@ -134,17 +87,17 @@
                     android:id="@+id/txtDateDisplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
                     android:layout_marginTop="20dp"
+                    android:text="TextView"
                     app:layout_constraintStart_toStartOf="@+id/guideline13"
-                    app:layout_constraintTop_toBottomOf="@+id/txtSubCategoryDisplay"
-                    />
+                    app:layout_constraintTop_toBottomOf="@+id/txtSubCategoryDisplay" />
+
                 <TextView
                     android:id="@+id/txtRegisteredBy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/made_by"
                     android:layout_marginTop="20dp"
+                    android:text="@string/made_by"
                     app:layout_constraintStart_toStartOf="@+id/guideline11"
                     app:layout_constraintTop_toBottomOf="@+id/txtDate" />
 
@@ -152,17 +105,17 @@
                     android:id="@+id/txtRegisteredByDisplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
                     android:layout_marginTop="20dp"
+                    android:text="TextView"
                     app:layout_constraintStart_toStartOf="@+id/guideline13"
-                    app:layout_constraintTop_toBottomOf="@+id/txtDateDisplay"
-                    />
+                    app:layout_constraintTop_toBottomOf="@+id/txtDateDisplay" />
+
                 <TextView
                     android:id="@+id/txtNotes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/notes"
                     android:layout_marginTop="20dp"
+                    android:text="@string/notes"
                     app:layout_constraintStart_toStartOf="@+id/guideline11"
                     app:layout_constraintTop_toBottomOf="@+id/txtRegisteredBy" />
 
@@ -172,35 +125,120 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="15dp"
+                    android:layout_marginRight="15dp"
                     android:text="TextView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline11"
-                    app:layout_constraintTop_toBottomOf="@+id/txtNotes"
-                    android:layout_marginRight="15dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtNotes" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline11"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_begin="30dp" />
+                    app:layout_constraintGuide_begin="71dp" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline13"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_begin="157dp" />
+                    app:layout_constraintGuide_begin="186dp" />
 
                 <Button
                     android:id="@+id/buttonDeleteTransaction"
-                    android:layout_width="wrap_content"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="@string/delete"
+                    android:background="@drawable/buttons"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtNotesDisplay" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toTopOf="@+id/guideline10"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:gravity="center"
+                    android:background="@color/white"
+                    android:layout_marginHorizontal="40dp"
+                    android:padding="15dp"
+                    >
+
+                        <TextView
+                            android:id="@+id/textAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/amount"
+                            android:textColor="@color/rec_view_gray"
+                            android:textSize="35sp"
+                            android:textStyle="bold"
+                            android:layout_marginBottom="10dp"
+                            />
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:gravity="center"
+                            android:layout_marginBottom="10dp"
+                            >
+                                <TextView
+                                    android:id="@+id/textConcerning"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/concerning"
+                                    android:textColor="@color/rec_view_gray"
+                                    android:layout_marginRight="10dp"
+                                    android:layout_marginEnd="10dp"
+                                    />
+
+                                <TextView
+                                    android:id="@+id/textConcerningDisplay"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="TextView"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/rec_view_gray"
+                                    />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            >
+                                <TextView
+                                    android:id="@+id/textAccountChosen"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/account"
+                                    android:textColor="@color/rec_view_gray"
+                                    android:layout_marginRight="10dp"
+                                    android:layout_marginEnd="10dp" />
+
+                                <TextView
+                                    android:id="@+id/textAccountChosenDisplay"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="TextView"
+                                    android:textColor="@color/rec_view_gray"
+                                    />
+
+                        </LinearLayout>
+
+
+
+                </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
