--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/linearLayout2"
-    tools:context=".fragments.Accounts"
+    tools:context=".fragments.accounts.Accounts"
     android:padding="15dp">
 
     <androidx.recyclerview.widget.RecyclerView
