--- a/app/src/main/res/layout/fragment_all_micro_acounts.xml
+++ b/app/src/main/res/layout/fragment_all_micro_acounts.xml
@@ -10,6 +10,22 @@
     >
 
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_new_MicroFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/settings"
+        app:backgroundTint="?attr/colorPrimary"
+        app:fabCustomSize="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.94"
+        app:maxImageSize="40dp"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
+
     <SearchView
         android:id="@+id/searchAllMicro"
         android:layout_width="match_parent"
